Add truncation option to REST document fetch (#2547)
